Fix all videos with stable image URLs

--- a/Foxes/video_10.html
+++ b/Foxes/video_10.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?lobster,food,restaurant" alt="LOBSTER ROLL" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1534939268851-c2cd58d0b04b?w=800" alt="LOBSTER ROLL" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>LOBSTER ROLL</h1>
-            <p>Fresh lobster meat on a toasted butter roll</p>
+            <p>Fresh lobster meat on a toasted butter roll.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #10</div>
