--- a/Foxes/video_11.html
+++ b/Foxes/video_11.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?salad,food,restaurant" alt="CAPRESE SALAD" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1608897013039-887f21d8c804?w=800" alt="CAPRESE SALAD" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>CAPRESE SALAD</h1>
-            <p>Fresh mozzarella, tomatoes, and basil with balsamic glaze</p>
+            <p>Fresh mozzarella, tomatoes, and basil with balsamic glaze.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #11</div>
