--- a/Foxes/video_12.html
+++ b/Foxes/video_12.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?pork,food,restaurant" alt="PORK CHOPS" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1598103442097-8b74394b95c6?w=800" alt="PORK CHOPS" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>PORK CHOPS</h1>
-            <p>Pan-seared pork chops with apple compote</p>
+            <p>Pan-seared pork chops with apple compote.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #12</div>
