--- a/Foxes/video_13.html
+++ b/Foxes/video_13.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?shrimp,food,restaurant" alt="SHRIMP SCAMPI" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1563458838198-59e0cd6555e9?w=800" alt="SHRIMP SCAMPI" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>SHRIMP SCAMPI</h1>
-            <p>Jumbo shrimp in white wine garlic butter sauce</p>
+            <p>Jumbo shrimp in white wine garlic butter sauce.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #13</div>
