--- a/Foxes/video_14.html
+++ b/Foxes/video_14.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?burger,food,restaurant" alt="VEGGIE BURGER" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1520072959219-c595dc870360?w=800" alt="VEGGIE BURGER" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>VEGGIE BURGER</h1>
-            <p>House-made black bean patty with avocado and sprouts</p>
+            <p>House-made black bean patty with avocado and sprouts.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #14</div>
