--- a/Foxes/video_15.html
+++ b/Foxes/video_15.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?food,food,restaurant" alt="CRAB CAKES" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1626074353765-517a681e40be?w=800" alt="CRAB CAKES" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>CRAB CAKES</h1>
-            <p>Maryland-style crab cakes with remoulade sauce</p>
+            <p>Maryland-style crab cakes with remoulade sauce.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #15</div>
