--- a/Foxes/video_16.html
+++ b/Foxes/video_16.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?steak,food,restaurant" alt="STEAK FAJITAS" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1599974579630-ec1c57b7be27?w=800" alt="STEAK FAJITAS" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>STEAK FAJITAS</h1>
-            <p>Sizzling beef with peppers and onions</p>
+            <p>Sizzling beef with peppers and onions.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #16</div>
