--- a/Foxes/video_17.html
+++ b/Foxes/video_17.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?salad,food,restaurant" alt="GREEK SALAD" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?w=800" alt="GREEK SALAD" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>GREEK SALAD</h1>
-            <p>Cucumber, tomato, olives, and feta with oregano vinaigrette</p>
+            <p>Cucumber, tomato, olives, and feta with oregano vinaigrette.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #17</div>
