--- a/Foxes/video_2.html
+++ b/Foxes/video_2.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?salmon,food,restaurant" alt="GRILLED SALMON" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1467003909585-2f8a72700288?w=800" alt="GRILLED SALMON" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>GRILLED SALMON</h1>
-            <p>Wild-caught Atlantic salmon with lemon butter and herbs</p>
+            <p>Wild-caught Atlantic salmon with lemon butter and herbs.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #2</div>
