--- a/Foxes/video_20.html
+++ b/Foxes/video_20.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?tuna,food,restaurant" alt="TUNA POKE BOWL" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=800" alt="TUNA POKE BOWL" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>TUNA POKE BOWL</h1>
-            <p>Fresh ahi tuna with rice, avocado, and sesame</p>
+            <p>Fresh ahi tuna with rice, avocado, and sesame.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #20</div>
