--- a/Foxes/video_21.html
+++ b/Foxes/video_21.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?cheese,food,restaurant" alt="MAC & CHEESE" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1543352634-a1c51d9f1fa7?w=800" alt="MAC & CHEESE" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>MAC & CHEESE</h1>
-            <p>Creamy three-cheese blend with breadcrumb topping</p>
+            <p>Creamy three-cheese blend with breadcrumb topping.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #21</div>
