--- a/Foxes/video_22.html
+++ b/Foxes/video_22.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?lamb,food,restaurant" alt="LAMB CHOPS" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1529692236671-f1f6cf9683ba?w=800" alt="LAMB CHOPS" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>LAMB CHOPS</h1>
-            <p>Herb-crusted lamb with mint chimichurri</p>
+            <p>Herb-crusted lamb with mint chimichurri.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #22</div>
