--- a/Foxes/video_23.html
+++ b/Foxes/video_23.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?food,food,restaurant" alt="VEGETABLE STIR-FRY" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1512058564366-18510be2db19?w=800" alt="VEGETABLE STIR-FRY" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>VEGETABLE STIR-FRY</h1>
-            <p>Seasonal vegetables in ginger soy sauce</p>
+            <p>Seasonal vegetables in ginger soy sauce.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #23</div>
