--- a/Foxes/video_24.html
+++ b/Foxes/video_24.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?pork,food,restaurant" alt="PULLED PORK SANDWICH" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1628238289717-4db0e00be3e0?w=800" alt="PULLED PORK SANDWICH" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>PULLED PORK SANDWICH</h1>
-            <p>Slow-smoked pulled pork with coleslaw</p>
+            <p>Slow-smoked pulled pork with coleslaw.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #24</div>
