--- a/Foxes/video_25.html
+++ b/Foxes/video_25.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?sushi,food,restaurant" alt="SUSHI ROLLS" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1579584425555-c3ce17fd4351?w=800" alt="SUSHI ROLLS" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>SUSHI ROLLS</h1>
-            <p>Chef's selection of fresh nigiri and maki rolls</p>
+            <p>Chef's selection of fresh nigiri and maki rolls.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #25</div>
