--- a/Foxes/video_26.html
+++ b/Foxes/video_26.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?chicken,food,restaurant" alt="CHICKEN TENDERS" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1562967914-608f82629710?w=800" alt="CHICKEN TENDERS" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>CHICKEN TENDERS</h1>
-            <p>Crispy hand-breaded tenders with honey mustard</p>
+            <p>Crispy hand-breaded tenders with honey mustard.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #26</div>
