--- a/Foxes/video_27.html
+++ b/Foxes/video_27.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?salmon,food,restaurant" alt="SALMON SALAD" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1546069901-d5bfd2cbfb1f?w=800" alt="SALMON SALAD" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>SALMON SALAD</h1>
-            <p>Grilled salmon over mixed greens with citrus vinaigrette</p>
+            <p>Grilled salmon over mixed greens with citrus vinaigrette.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #27</div>
