--- a/Foxes/video_29.html
+++ b/Foxes/video_29.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?food,food,restaurant" alt="VEGETABLE LASAGNA" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1621510456681-2330135e5871?w=800" alt="VEGETABLE LASAGNA" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>VEGETABLE LASAGNA</h1>
-            <p>Layered pasta with roasted vegetables and ricotta</p>
+            <p>Layered pasta with roasted vegetables and ricotta.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #29</div>
