--- a/Foxes/video_3.html
+++ b/Foxes/video_3.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?salad,food,restaurant" alt="CAESAR SALAD" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1546793665-c74683f339c1?w=800" alt="CAESAR SALAD" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>CAESAR SALAD</h1>
-            <p>Fresh romaine with parmesan, croutons, and house-made dressing</p>
+            <p>Fresh romaine with parmesan, croutons, and house-made dressing.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #3</div>
