--- a/Foxes/video_30.html
+++ b/Foxes/video_30.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?shrimp,food,restaurant" alt="COCONUT SHRIMP" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1625944525533-473f1a3d54e7?w=800" alt="COCONUT SHRIMP" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>COCONUT SHRIMP</h1>
-            <p>Crispy coconut-breaded shrimp with pineapple sauce</p>
+            <p>Crispy coconut-breaded shrimp with pineapple sauce.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #30</div>
