--- a/Foxes/video_4.html
+++ b/Foxes/video_4.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?steak,food,restaurant" alt="RIBEYE STEAK" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1558030006-450675393462?w=800" alt="RIBEYE STEAK" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>RIBEYE STEAK</h1>
-            <p>12oz prime ribeye grilled to perfection with garlic butter</p>
+            <p>12oz prime ribeye grilled to perfection with garlic butter.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #4</div>
