--- a/Foxes/video_5.html
+++ b/Foxes/video_5.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?pasta,food,restaurant" alt="CHICKEN PASTA" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1621996346565-e3dbc646d9a9?w=800" alt="CHICKEN PASTA" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>CHICKEN PASTA</h1>
-            <p>Grilled chicken with sun-dried tomatoes in creamy alfredo sauce</p>
+            <p>Grilled chicken with sun-dried tomatoes in creamy alfredo sauce.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #5</div>
