--- a/Foxes/video_7.html
+++ b/Foxes/video_7.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?risotto,food,restaurant" alt="MUSHROOM RISOTTO" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1476124369491-c4d6d4e1eb88?w=800" alt="MUSHROOM RISOTTO" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>MUSHROOM RISOTTO</h1>
-            <p>Creamy arborio rice with wild mushrooms and truffle oil</p>
+            <p>Creamy arborio rice with wild mushrooms and truffle oil.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #7</div>
