--- a/Foxes/video_8.html
+++ b/Foxes/video_8.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?tacos,food,restaurant" alt="FISH TACOS" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1599974789162-f1c9c60e62e0?w=800" alt="FISH TACOS" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>FISH TACOS</h1>
-            <p>Crispy cod with cabbage slaw and chipotle mayo</p>
+            <p>Crispy cod with cabbage slaw and chipotle mayo.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #8</div>
