--- a/Foxes/video_9.html
+++ b/Foxes/video_9.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?ribs,food,restaurant" alt="BBQ RIBS" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1544025162-d76694265947?w=800" alt="BBQ RIBS" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>BBQ RIBS</h1>
-            <p>Slow-cooked baby back ribs with our secret BBQ sauce</p>
+            <p>Slow-cooked baby back ribs with our secret BBQ sauce.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #9</div>
