--- a/Foxes/video_1.html
+++ b/Foxes/video_1.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?burger,food,restaurant" alt="SIGNATURE BURGER" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1568901346375-23c9450c58cd?w=800" alt="SIGNATURE BURGER" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>SIGNATURE BURGER</h1>
-            <p>8oz grass-fed beef burger with aged cheddar and crispy bacon</p>
+            <p>Our 8oz grass-fed beef burger with aged cheddar and crispy bacon.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #1</div>
