--- a/Foxes/video_18.html
+++ b/Foxes/video_18.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?wings,food,restaurant" alt="CHICKEN WINGS" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1608039755401-742074f0548d?w=800" alt="CHICKEN WINGS" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>CHICKEN WINGS</h1>
-            <p>Crispy wings tossed in buffalo or BBQ sauce</p>
+            <p>Crispy wings tossed in buffalo or BBQ sauce.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #18</div>
