--- a/Foxes/video_19.html
+++ b/Foxes/video_19.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?food,food,restaurant" alt="FILET MIGNON" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1546833998-877b37c2e5c6?w=800" alt="FILET MIGNON" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>FILET MIGNON</h1>
-            <p>8oz tender beef filet with red wine reduction</p>
+            <p>8oz tender beef filet with red wine reduction.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #19</div>
