--- a/Foxes/video_28.html
+++ b/Foxes/video_28.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?food,food,restaurant" alt="PRIME RIB" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1544025162-d76694265947?w=800" alt="PRIME RIB" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>PRIME RIB</h1>
-            <p>Slow-roasted prime rib with au jus and horseradish</p>
+            <p>Slow-roasted prime rib with au jus and horseradish.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #28</div>
