--- a/Foxes/video_6.html
+++ b/Foxes/video_6.html
@@ -76,10 +76,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://source.unsplash.com/800x600/?seafood,food,restaurant" alt="SEAFOOD PLATTER" class="food-image" />
+        <img src="https://images.unsplash.com/photo-1559737558-2f8b6e6c4f7e?w=800" alt="SEAFOOD PLATTER" class="food-image" onerror="this.style.display='none'" />
         <div class="text-content">
             <h1>SEAFOOD PLATTER</h1>
-            <p>Fresh shrimp, scallops, and calamari with cocktail sauce</p>
+            <p>Fresh shrimp, scallops, and calamari with cocktail sauce.</p>
         </div>
     </div>
     <div class="watermark">FIFOX PRODUCTION #6</div>
